# frontend_agent_Ai

Prototype_agent/: README.md  main.py  pyproject.toml  requirements.txt
Prototype_agent/Protfolio_agent/frontend_agent/: frontend_agent.py
Prototype_agent/schema/: About.py  Skills.py  contact.py  projects.py
Prototype_agent/tic-tac-toe/tic-tac-toe/: index.html
Prototype_agent/tic-tac-toe/tic-tac-toe/css/: design-system.css
