[project]
name = "prototype-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.68.0",
    "pydantic-ai-slim[groq]>=1.68.0",
    "uvicorn>=0.42.0",
]
